kustomize-test/overlays/test-version-upgrade/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress2
spec:
  rules:
  - host: stg-monitoring.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
  - host: stg-prometheus.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 9090
  - host: stg-alertmanager.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-service
          servicePort: 9093
  tls:
  - secretName: cloudzcp-io-cert
    hosts:
    - stg-monitoring.cloudzcp.io
    - stg-prometheus.cloudzcp.io
    - stg-alertmanager.cloudzcp.io
